--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
 
   bot:
-    build: .
+    image: stepaxvii/bot-pushups:latest
     environment:
       - TOKEN_BOT=${TOKEN_BOT}
       - REDIS_URL=redis://redis:6379/0
@@ -26,7 +26,7 @@ services:
     restart: unless-stopped
 
   scheduler:
-    build: .
+    image: stepaxvii/bot-pushups:latest
     command: python scheduler.py
     environment:
       - TOKEN_BOT=${TOKEN_BOT}
